--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="game-header">
-            <h1 class="game-title">🎨 Pixel Plagiarist</h1>
+            <div class="game-logo"></div>
         </div>
         
         <div class="main-content">
