Replace integration tests with modularized fixtures and improve test configuration setup.

--- a/templates/login.html
+++ b/templates/login.html
@@ -48,13 +48,13 @@
                     <div class="oauth-login">
                         <h4>Sign in with Google</h4>
                         <p class="oauth-description">Link your Google account for persistent stats and leaderboard tracking</p>
-                        <a href="{{ url_ttps://developers.google.com/identity/images/g-logo.png" alt="Google" width="20" height="20">
+                        <a href="{{ url_for('google_auth') }}" class="google-login-btn">
+                            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google" width="20" height="20">
                             Sign in with Google
                         </a>
                     </div>
                 </div>
-            </div>for('google_auth') }}" class="google-login-btn">
-                            <img src="h
+            </div>
         </div>
     </div>
 </body>
